--- a/example-dissent-in-the-middle.qmd
+++ b/example-dissent-in-the-middle.qmd
@@ -26,7 +26,7 @@ vdem <- democracyData::vdem_simple %>%
   glimpse()
 
 # download latest version of dissent scores
-gh_url <- "output/dissent-scores.csv"
+gh_url <- "https://raw.githubusercontent.com/carlislerainey/dissent-scores/main/output/dissent-scores.csv"
 dissent_scores <- read_csv(gh_url) |>
   glimpse()
 
