--- a/identify-dissent-events.qmd
+++ b/identify-dissent-events.qmd
@@ -72,11 +72,46 @@ names_codes <- read_csv("data/king-lowe-2008/names-of-source-_-target.txt",
 
 We categorize nonviolent dissent following Murdie and Bhasin (2011). See the first table in the file `Murdie Bhasin JCR Online Replication Materials 05.13.10.doc` available for download [here](https://journals.sagepub.com/doi/suppl/10.1177/0022002710374715/suppl_file/DS_10.11770022002710374715.zip).
 
+
+```{r}
+#| code-fold: true
+mb_si_nonviolent <- tibble::tribble(
+  ~ACTIVITY,                         ~IDEA.CODE,   ~DEFINITION,
+  "Break relations",                 "<BREL>",     "Formal severance of ties.",
+  "Defy norms",                     "<DEFY>",     "Open defiance of laws and norms, civil disobedience.",
+  "Demonstrate",                    "<DEMO>",     "Demonstrations not otherwise specified.",
+  "Formally complain",              "<FCOM>",     "Written and institutionalized protests and appeals, and all petition drives and recalls.",
+  "Informally complain",            "<ICOM>",     "Verbal protests and rebukes, and all other informal complaints.",
+  "Protest altruism",               "<PALT>",     "Protest demonstrations that place the source (protestor) at risk for the sake of unity with the target.",
+  "Protest demonstrations",         "<PDEM>",     "All protest demonstrations not otherwise specified.",
+  "Protest procession",             "<PMAR>",     "Picketing and other parading protests.",
+  "Protest obstruction",            "<POBS>",     "Sit-ins and other non-military occupation protests.",
+  "Protest defacement",             "<PPRO>",     "Damage, sabotage and the use of graffiti to desecrate property and symbols.",
+  "Reduce routine activity",         "<REDR>",     "Reduction of routine and planned activities.",
+  "Rally support",                  "<SRAL>",     "Gatherings to express or demonstrate support, celebrations and all other public displays of confidence; includes protest vigils and commemorations.",
+  "Strikes and boycotts",           "<STRI>",     "Labor and professional sanctions reported as strikes, general strikes, walkouts, withholding of goods or services and lockouts.",
+  "Threaten to boycott or embargo", "<TBOE>",     "Threaten to boycott or impose embargoes, restrict normal interactions presented explicitly as a protest or retaliatory measure.",
+  "Threaten to reduce or break relations", "<TRBR>", "Threaten to reduce or formally sever ties.",
+  "Sanctions threat",               "<TSAN>",     "Threats of non-military, non-physical force social, economic and political sanctions.",
+  "Give ultimatum",                "<ULTI>",     "Threats conveyed explicitly as an ultimatum."
+) %>%
+  mutate(TYPE = "Nonviolent")
+
+# create nice table
+kableExtra::kable(mb_si_nonviolent)
+```
+
+
+
+### Violent Dissent
+
+We categorize violent dissent following Murdie and Bhasin (2011). See the fsecond table in the file `Murdie Bhasin JCR Online Replication Materials 05.13.10.doc` available for download [here](https://journals.sagepub.com/doi/suppl/10.1177/0022002710374715/suppl_file/DS_10.11770022002710374715.zip).
+
 ```{r}
 #| message: false
 #| code-fold: true
 
-mb_si_nonviolent <- tibble::tribble(
+mb_si_violent <- tibble::tribble(
   ~ACTIVITY,                           ~IDEA.CODE,   ~DEFINITION,
   "Abduction",                        "<ABDU>",     "Abducting, hijacking and capturing of people.",
   "Missile attack",                   "<AERI>",     "Launching of intermediate to long-range conventional ballistic missiles and aerial dropping of conventional explosive devices or bombs.",
@@ -114,42 +149,10 @@ mb_si_nonviolent <- tibble::tribble(
   "Threaten war",                     "<TWAR>",     "Explicit threat to declare a state of (military) war.",
   "Vehicle bombing",                  "<VBOM>",     "Bombing explicitly characterized as a vehicle bombing (car bombing, etc.), except for suicide bombings, which are coded separately."
 )  %>%
-  mutate(TYPE = "Nonviolent")
-
-# create nice table
-kableExtra::kable(mb_si_nonviolent)
-```
-
-### Violent Dissent
-
-We categorize violent dissent following Murdie and Bhasin (2011). See the fsecond table in the file `Murdie Bhasin JCR Online Replication Materials 05.13.10.doc` available for download [here](https://journals.sagepub.com/doi/suppl/10.1177/0022002710374715/suppl_file/DS_10.11770022002710374715.zip).
-
-```{r}
-#| code-fold: true
-mb_si_violent <- tibble::tribble(
-  ~ACTIVITY,                         ~IDEA.CODE,   ~DEFINITION,
-  "Break relations",                 "<BREL>",     "Formal severance of ties.",
-  "Defy norms",                     "<DEFY>",     "Open defiance of laws and norms, civil disobedience.",
-  "Demonstrate",                    "<DEMO>",     "Demonstrations not otherwise specified.",
-  "Formally complain",              "<FCOM>",     "Written and institutionalized protests and appeals, and all petition drives and recalls.",
-  "Informally complain",            "<ICOM>",     "Verbal protests and rebukes, and all other informal complaints.",
-  "Protest altruism",               "<PALT>",     "Protest demonstrations that place the source (protestor) at risk for the sake of unity with the target.",
-  "Protest demonstrations",         "<PDEM>",     "All protest demonstrations not otherwise specified.",
-  "Protest procession",             "<PMAR>",     "Picketing and other parading protests.",
-  "Protest obstruction",            "<POBS>",     "Sit-ins and other non-military occupation protests.",
-  "Protest defacement",             "<PPRO>",     "Damage, sabotage and the use of graffiti to desecrate property and symbols.",
-  "Reduce routine activity",         "<REDR>",     "Reduction of routine and planned activities.",
-  "Rally support",                  "<SRAL>",     "Gatherings to express or demonstrate support, celebrations and all other public displays of confidence; includes protest vigils and commemorations.",
-  "Strikes and boycotts",           "<STRI>",     "Labor and professional sanctions reported as strikes, general strikes, walkouts, withholding of goods or services and lockouts.",
-  "Threaten to boycott or embargo", "<TBOE>",     "Threaten to boycott or impose embargoes, restrict normal interactions presented explicitly as a protest or retaliatory measure.",
-  "Threaten to reduce or break relations", "<TRBR>", "Threaten to reduce or formally sever ties.",
-  "Sanctions threat",               "<TSAN>",     "Threats of non-military, non-physical force social, economic and political sanctions.",
-  "Give ultimatum",                "<ULTI>",     "Threats conveyed explicitly as an ultimatum."
-) %>%
   mutate(TYPE = "Violent")
 
 # create nice table
-kableExtra::kable(mb_si_nonviolent)
+kableExtra::kable(mb_si_violent)
 ```
 
 ```{r}
