--- a/index.qmd
+++ b/index.qmd
@@ -1,31 +1,68 @@
 ---
-title: "The Dissent Scores Project"
+title: "The Dissent Score Data Set"
 ---
 
-::: callout-important
-This is an **alpha release** of the paper and data set. We plan to release a finalized version with proper DOIs near the end of September, but we wanted to share it widely first to help us catch any obvious mistakes. For this alpha release, the data are hosted on GitHub. Future versions will posted to Dataverse.
-:::
+The dissent score data set provides a standardized, public, ready-to-use data set with a measure of dissent at the country-year level based on . On this webpage, we supply [the preprint](https://osf.io/preprints/socarxiv/dw7np) describing the data, the [data sets](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/CL4CA8), and a careful description of how we wrangled the IDEA data into our dissent score.
 
-The Dissent Scores Project provides a standardized, public, ready-to-use data set with a measure of dissent at the country-year level.
+## Get the Data
 
-On this webpage, we supply the preprint describing the data, the data sets, and a careful description of how we wrangled the IDEA data into our dissent scores.
+The dissent score data set is permanently archived on [Dataverse](https://doi.org/10.7910/DVN/CL4CA8). You can download the data directly from Dataverse with the code below.
 
-To create these dissent scores, we follow the standard practice in the literature and use the number of dissent events reported in events data sets. However, we make two improvements.
+```{r}
+#| message: false
+
+# load packages
+library(tidyverse)
+library(dataverse)
+
+# get the dissent score data set from dataverse
+dissent <- get_dataframe_by_name(
+  filename = "dissent-scores.tab",
+  dataset  = "doi:10.7910/DVN/CL4CA8",
+  server   = "dataverse.harvard.edu", 
+  original = TRUE, 
+  .f = readr::read_csv) |> 
+  glimpse()
+```
+
+## Cite the Data
+
+**Paper**
+
+- Rainey, Carlisle, Harley Roe, Qing Wang, and Nick Dietrich. 2023. "The Dissent Score: Using Events Data to Measure Dissent." [https://osf.io/preprints/socarxiv/dw7np](https://osf.io/preprints/socarxiv/dw7np).
+
+**Data Set**
+
+- Rainey, Carlisle, Harley Roe, Qing Wang, and Nick Dietrich. 2023. "Dissent Scores." [https://doi.org/10.7910/DVN/CL4CA8](https://doi.org/10.7910/DVN/CL4CA8). Harvard Dataverse.
+
+## Understand the Data
+
+To create the dissent score, we follow the standard practice in the literature and use the number of dissent events reported in events data sets. However, we make two improvements.
 
 1.  First, we adjust for variation in media scrutiny by using the rate of dissent events---the number of dissent events compared to the total number of events reported in the data set.
 2.  Second, we use a hierarchical model to partially pool these rates within and across countries to reduce the error in places with few events.
 
-We supply the country-year dissent scores in an easy-to-use format, but also describe our method and supply the computer code so that researchers can extend our method, make adjustments, compute dissent scores for alternative place-times, or apply the idea to new concepts.
+For more details, see the paper.
 
 ```{r}
 #| message: false
 #| warning: false
 #| echo: false
+
+# load packages
 library(tidyverse)
+library(dataverse)
+library(httr)
 
-gh_url <- "https://raw.githubusercontent.com/carlislerainey/dissent-scores/main/output/dissent-scores.csv"
-dissent <- read_csv(gh_url) 
+# get dissent score data set from dataverse
+dissent <- get_dataframe_by_name(
+  filename = "dissent-scores.tab",
+  dataset  = "doi:10.7910/DVN/CL4CA8",
+  server   = "dataverse.harvard.edu", 
+  original = TRUE, 
+  .f = readr::read_csv)
 
+# make interesting plot
 coi <- c("United States", "Japan", "Brazil", "Cape Verde")
 ggplot(dissent, aes(x = year, y = dissent_score, color = country_name)) + 
   geom_line(linewidth = 1.3) + 
@@ -34,48 +71,7 @@ ggplot(dissent, aes(x = year, y = dissent_score, color = country_name)) +
                              unhighlighted_params = list(linewidth = 0.5, alpha = 0.3))
 ```
 
-<!-- ## Download the Data -->
 
-<!-- ```{r} -->
-
-<!-- #| message: false -->
-
-<!-- # load packages -->
-
-<!-- library(dataverse) -->
-
-<!-- # download latest version of taiwan data set -->
-
-<!-- taiwan <- get_dataframe_by_name( -->
-
-<!--   filename = "taiwan.tab", -->
-
-<!--   dataset = "10.7910/DVN/FMLYTY",  -->
-
-<!--   server = "dataverse.harvard.edu") -->
-
-<!-- ``` -->
-
-## Download the Data
-
-The data for this alpha release are hosted on GitHub and can easily be downloaded and tested with the code below.
-
-```{r}
-#| message: false
-
-# load packages
-library(tidyverse)
-
-# read csv directly from github
-gh_url <- "https://raw.githubusercontent.com/carlislerainey/dissent-scores/main/output/dissent-scores.csv"
-dissent <- read_csv(gh_url) |>
-  glimpse()
-```
-
-## Cite the Data
-
-We will release a final version around the end of September (we're hoping to correct any errors quickly after this alpha release). At that point, we'll give the data set and paper proper DOIs.
-
-## Improve the Data and Method
+## Improve the Data
 
 We offer both *data set* and a *method*. Both can be improved and/or extended! We welcome bug reports, tiny suggestions, and big criticisms. We hope that others will find this useful and help us make it better.
